--- a/app/src/main/res/layout/activity_get_reminder.xml
+++ b/app/src/main/res/layout/activity_get_reminder.xml
@@ -1,12 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
+    <ListView
         android:id="@+id/reminders_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Reminders will be shown here."
-        android:layout_centerInParent="true"/>
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"/>
+</LinearLayout>
