--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,43 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
-    <GridLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/call_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="2"
-        android:columnCount="2"
-        android:padding="16dp"
-        android:layout_gravity="center">
+        android:text="Call Caregiver"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="32dp"/>
 
-        <Button
-            android:id="@+id/call_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Call Caregiver"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_margin="8dp"/>
+    <Button
+        android:id="@+id/set_reminder_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Reminder"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="2dp"
+        android:layout_centerVertical="true"/>
 
-        <Button
-            android:id="@+id/set_reminder_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Set Reminder"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_margin="8dp"/>
+    <Button
+        android:id="@+id/get_reminder_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Reminder"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="32dp"
+        android:layout_centerHorizontal="true"/>
 
-        <Button
-            android:id="@+id/get_reminder_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Get Reminder"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_margin="8dp"/>
-
-        <Button
-            android:id="@+id/about_me_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="About Me"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_margin="8dp"/>
-
-    </GridLayout>
-</ScrollView>
+    <Button
+        android:id="@+id/about_me_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="About Me"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_centerVertical="true"/>
+</RelativeLayout>
