--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,79 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <Button
+    <ImageButton
         android:id="@+id/call_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Call Caregiver"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="32dp"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="2dp"
+        android:background="@drawable/round_button_background_green"
+        android:contentDescription="Call Caregiver"
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_call"
+        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
+        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
+        app:layout_constraintHeight_percent="0.37"
+        app:layout_constraintWidth_percent="0.37" />
 
-    <Button
+    <ImageButton
         android:id="@+id/set_reminder_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Set Reminder"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="2dp"
-        android:layout_centerVertical="true"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="2dp"
+        android:background="@drawable/round_button_background_yellow"
+        android:contentDescription="Set Reminder"
+        android:scaleType="fitCenter"
+        android:padding="8dp"
+        android:src="@drawable/ic_reminder"
+        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
+        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
+        app:layout_constraintHeight_percent="0.37"
+        app:layout_constraintWidth_percent="0.37" />
 
-    <Button
+    <ImageButton
         android:id="@+id/get_reminder_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get Reminder"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="32dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="2dp"
+        android:background="@drawable/round_button_background_red"
+        android:contentDescription="Get Reminder"
+        android:scaleType="fitCenter"
+        android:padding="8dp"
+        android:src="@drawable/ic_get_reminder"
+        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
+        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
+        app:layout_constraintHeight_percent="0.37"
+        app:layout_constraintWidth_percent="0.37" />
 
-    <Button
+    <ImageButton
         android:id="@+id/about_me_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="2dp"
+        android:background="@drawable/round_button_background_blue"
+        android:contentDescription="About Me"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_about_me"
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
+        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
+        app:layout_constraintHeight_percent="0.37"
+        app:layout_constraintWidth_percent="0.37" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About Me"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp"
-        android:layout_centerVertical="true"/>
-</RelativeLayout>
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+</androidx.constraintlayout.widget.ConstraintLayout>
