--- a/app/src/main/res/layout/activity_set_reminder.xml
+++ b/app/src/main/res/layout/activity_set_reminder.xml
@@ -1,29 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <EditText
         android:id="@+id/reminder_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/time_hh_mm"
-        android:inputType="time"/>
+        android:hint="Enter time (HH:mm)"
+        android:inputType="time"
+        android:maxLength="5" />
 
     <EditText
         android:id="@+id/reminder_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/reminder_message"
-        android:layout_below="@id/reminder_time"
-        android:layout_marginTop="16dp"/>
+        android:hint="Enter reminder message" />
 
     <Button
         android:id="@+id/set_reminder_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/set_reminder"
-        android:layout_below="@id/reminder_message"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
-</RelativeLayout>
+        android:text="Set Reminder" />
+</LinearLayout>
